--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,7 @@ footer{
 
 #menu a{
     text-decoration: none;
+    font-size: 20px;
     color: #fff;
     text-shadow: 1px 1px 1px rgb(146, 146, 146);
     padding: 15px;
