--- a/css/style.css
+++ b/css/style.css
@@ -82,3 +82,17 @@ footer{
     background-color: #fff;
     border-radius: 5px;
 }
+
+@media (min-width: 601px) and (max-width: 900px){
+    #menu a{
+        padding: 0;
+        font-size: 18px;
+    }
+}
+
+@media (max-width: 600px){
+    #menu a{
+        padding: 0;
+        font-size: 12px;
+    }
+}
