--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,7 @@ footer{
     font-size: 15px;
     margin: auto;
     padding: 20px 0 0 0;
+    bottom: 0;
 }
 
 .container{
@@ -94,6 +95,6 @@ footer{
 @media (max-width: 600px){
     #menu a{
         padding: 0;
-        font-size: 12px;
+        font-size: 11px;
     }
 }
