--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,9 @@ footer{
     font-size: 15px;
     margin: auto;
     padding: 20px 0 0 0;
+    position: absolute;
     bottom: 0;
+    width: 100%;
 }
 
 .container{
