--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,17 @@
     font-family: Helvetica, 'Times New Roman';
 }
 
+html, body{
+
+    height: 100%;
+}
+
+#tudo{
+
+    min-height: 100%;
+    position: relative;
+}
+
 body{
 
     color: red;
@@ -24,7 +35,7 @@ header{
 }
 
 img{
-    width: 25%;
+    width: 25%px;
     height: 100px;
     float: left;
 
@@ -37,7 +48,9 @@ footer{
     font-size: 15px;
     margin: auto;
     padding: 20px 0 0 0;
+    position: absolute;
     bottom: 0;
+    width: 100%;
 }
 
 .container{
@@ -96,6 +109,6 @@ footer{
 @media (max-width: 600px){
     #menu a{
         padding: 0;
-        font-size: 10px;
+        font-size: 11px;
     }
 }
